--- a/menu.html
+++ b/menu.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/jogos.css"></link>
+    <link rel="stylesheet" href="style/jogos.css"></link>   
+    <script src="scripts/menu.js"></script>
     <title>Tela Inicial</title>
      <marquee behavior="scroll" direction="right"  class="iconehead">
-         <a class="joguinhosDaAna" href="file:///C:/Users/ana.281004/trabalho-pw-jogos/trabalho-pw-jogos/menu.html">Joguinhos da Ana</a
+         <button class="joguinhosDaAna" id="BotaoMenu">Joguinhos da Ana</button
     ></marquee>
 </head>
 <body>
