Jogo da cobrinha

--- a/menu.html
+++ b/menu.html
@@ -18,6 +18,11 @@
      <a href="templates\JogoDaMemoria.html">Joguinho da Memória</a>
     </div>
 
+    <div class="position" >
+        <a href="templates\JogoDaMemoria.html"> <img src="images/blank.png" href="templates\JogoDaMemoria.html"> </a>
+        <button id="" href="templates\JogoDaMemoria.html">Joguinho da Memória</button>
+       </div>
+
 
 
 </body>
