--- a/menu.html
+++ b/menu.html
@@ -12,18 +12,13 @@
     ></marquee>
 </head>
 <body>
-   
-    <div class="position" >
-     <a href="templates\JogoDaMemoria.html"> <img src="images/blank.png" href="templates\JogoDaMemoria.html"> </a>
-     <a href="templates\JogoDaMemoria.html">Joguinho da Memória</a>
-    </div>
-
     <div class="position" >
         <a href="templates\JogoDaMemoria.html"> <img src="images/blank.png" href="templates\JogoDaMemoria.html"> </a>
-        <button id="" href="templates\JogoDaMemoria.html">Joguinho da Memória</button>
-       </div>
-
-
-
+        <a href="templates\JogoDaMemoria.html">Joguinho da Memória</a>
+    </div>
+    <div class="position" >
+        <a href="templates\JogoDaCobrinha.html"> <img src="images/Cobrinha.png" href="templates\JogoDaCobrinha.html"> </a>
+        <button href="templates\JogoDaCobrinha.html">Joguinho da Cobrinha</button>
+    </div>
 </body>
 </html>
