--- a/menu.html
+++ b/menu.html
@@ -5,20 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/jogos.css"></link>   
-    <script src="scripts/menu.js"></script>
+    <script src="..\scripts/menu.js"></script>
     <title>Tela Inicial</title>
      <marquee behavior="scroll" direction="right"  class="iconehead">
-         <button class="joguinhosDaAna" id="BotaoMenu">Joguinhos da Ana</button
+         <button class="joguinhosDaAna" href="menu.html">Joguinhos da Ana</button
     ></marquee>
 </head>
 <body>
-    <div class="position" >
-        <a href="templates\JogoDaMemoria.html"> <img src="images/blank.png" href="templates\JogoDaMemoria.html"> </a>
-        <a href="templates\JogoDaMemoria.html">Joguinho da Memória</a>
+    <div class="items-menu">
+        <div class="position" >
+            <a href="templates\JogoDaMemoria.html"> <img src="images/blank.png" href="..\templates\JogoDaMemoria.html"> </a>
+            <a href="templates\JogoDaMemoria.html">Joguinho da Memória</a>
+        </div>
+        <div class="position" >
+            <a href="templates\JogoDaCobrinha.html"> <img class="img" src="images/Cobrinha.png" href="..\templates\JogoDaCobrinha.html"> </a>
+            <a href="..\templates\JogoDaCobrinha.html">Joguinho da Cobrinha</a>
+        </div>
+        <div class="position" >
+            <a href="templates\JogoDaMemoria.html"> <img src="images/blank.png" href="..\templates\JogoDaMemoria.html"> </a>
+            <a href="templates\JogoDaMemoria.html">Joguinho da Memória</a>
+        </div>
+        <div class="position" >
+            <a href="templates\JogoDaMemoria.html"> <img src="images/blank.png" href="..\templates\JogoDaMemoria.html"> </a>
+            <a href="templates\JogoDaMemoria.html">Joguinho da Memória</a>
+        </div>
     </div>
-    <div class="position" >
-        <a href="templates\JogoDaCobrinha.html"> <img src="images/Cobrinha.png" href="templates\JogoDaCobrinha.html"> </a>
-        <button href="templates\JogoDaCobrinha.html">Joguinho da Cobrinha</button>
-    </div>
+    <div></div>
 </body>
 </html>
