--- a/menu.html
+++ b/menu.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/jogos.css"></link>   
-    <script src="..\scripts/menu.js"></script>
     <title>Tela Inicial</title>
      <marquee behavior="scroll" direction="right"  class="iconehead">
          <button class="joguinhosDaAna" href="menu.html">Joguinhos da Ana</button
@@ -14,21 +13,18 @@
 <body>
     <div class="items-menu">
         <div class="position" >
-            <a href="templates\JogoDaMemoria.html"> <img src="images/blank.png" href="..\templates\JogoDaMemoria.html"> </a>
-            <a href="templates\JogoDaMemoria.html">Joguinho da Memória</a>
-        </div>
-        <div class="position" >
             <a href="templates\JogoDaCobrinha.html"> <img class="img" src="images/Cobrinha.png" href="..\templates\JogoDaCobrinha.html"> </a>
-            <a href="..\templates\JogoDaCobrinha.html">Joguinho da Cobrinha</a>
+            <a href="templates\JogoDaCobrinha.html">Joguinho da Cobrinha</a>
         </div>
         <div class="position" >
             <a href="templates\JogoDaMemoria.html"> <img src="images/blank.png" href="..\templates\JogoDaMemoria.html"> </a>
             <a href="templates\JogoDaMemoria.html">Joguinho da Memória</a>
         </div>
         <div class="position" >
-            <a href="templates\JogoDaMemoria.html"> <img src="images/blank.png" href="..\templates\JogoDaMemoria.html"> </a>
-            <a href="templates\JogoDaMemoria.html">Joguinho da Memória</a>
+            <a href="templates\JogoDoSimon.html"> <img src="images/blank.png" href="..\templates\JogoDoSimon.html"> </a>
+            <a href="templates\JogoDoSimon.html">Joguinho do Simon</a>
         </div>
+
     </div>
     <div></div>
 </body>
