alterações no frontend
fungadas do pe

--- a/menu.html
+++ b/menu.html
@@ -6,23 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/jogos.css"></link>   
     <title>Tela Inicial</title>
-     <marquee behavior="scroll" direction="right"  class="iconehead">
-         <button class="joguinhosDaAna" href="menu.html">Joguinhos da Ana</button
+     <marquee behavior="scroll" direction="right" scrolldelay="200"  class="iconehead">
+         <a class="joguinhosDaAna" href="menu.html">Joguinhos da Ana</a
     ></marquee>
 </head>
 <body>
     <div class="items-menu">
         <div class="position" >
-            <a href="templates\JogoDaCobrinha.html"> <img class="img" src="images/Cobrinha.png" href="..\templates\JogoDaCobrinha.html"> </a>
-            <a href="templates\JogoDaCobrinha.html">Joguinho da Cobrinha</a>
+            <a href="telas\JogoDaCobrinha.html"> <img class="img" src="images/Cobrinha.png" href="..\telas\JogoDaCobrinha.html"> </a>
+            <a href="telas\JogoDaCobrinha.html" class="text-color">Joguinho da Cobrinha</a>
         </div>
         <div class="position" >
-            <a href="templates\JogoDaMemoria.html"> <img src="images/blank.png" href="..\templates\JogoDaMemoria.html"> </a>
-            <a href="templates\JogoDaMemoria.html">Joguinho da Memória</a>
+            <a href="telas\JogoDaMemoria.html"> <img src="images/blank.png" href="..\telas\JogoDaMemoria.html"> </a>
+            <a href="telas\JogoDaMemoria.html" class="text-color">Joguinho da Memória</a>
         </div>
         <div class="position" >
-            <a href="templates\JogoDoSimon.html"> <img src="images/blank.png" href="..\templates\JogoDoSimon.html"> </a>
-            <a href="templates\JogoDoSimon.html">Joguinho do Simon</a>
+            <a href="telas\JogoDoSimon.html"> <img src="images/blank.png" href="..\telas\JogoDoSimon.html"> </a>
+            <a href="telas\JogoDoSimon.html" class="text-color">Joguinho do Simon</a>
         </div>
 
     </div>
