--- a/telas/JogoDaCobrinha.html
+++ b/telas/JogoDaCobrinha.html
@@ -8,11 +8,10 @@
     <script src="..\scripts/menu.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="../style/cobrinha.css">
-    
     <title>Jogo da Cobrinha</title>
-    <marquee behavior="scroll" direction="right"  class="iconehead">
-        <button class="joguinhosDaAna" href="menu.html">Joguinhos da Ana</button
-   ></marquee>
+    <marquee behavior="scroll" direction="right" scrolldelay="200"  class="iconehead">
+        <a class="joguinhosDaAna" href="../menu.html"> Joguinhos da Ana </a>
+   </marquee>
 </head>
 <body>
     <div class="score">score: <span class="score--value">00</span></div>
