--- a/telas/JogoDaMemoria.html
+++ b/telas/JogoDaMemoria.html
@@ -4,13 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jogos</title>
-  <link rel="stylesheet" href="..\style\jogos.css"></link>
+  <link rel="stylesheet" href="..\style\memoria.css"></link>
   <script src="..\scripts\jogoDaMemoria.js" charset="utf-8"></script>
   <script src="..\scripts/menu.js"></script>
 
-  <marquee behavior="scroll" direction="right"  class="iconehead">
-    <button class="joguinhosDaAna" href="menu.html">Joguinhos da Ana</button>
-  </marquee>
+
+  <marquee behavior="scroll" direction="right" scrolldelay="200" class="iconehead">
+    <a class="joguinhosDaAna" href="../menu.html"> Joguinhos da Ana </a>
+</marquee>
 </head>
 <body>
   <div class="jogoDaMemoria">
