--- a/telas/JogoDoSimon.html
+++ b/telas/JogoDoSimon.html
@@ -8,25 +8,24 @@
 
   <link href='https://fonts.googleapis.com/css?family=Original+Surfer&effect=emboss' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="../style/simon.css">
-
-  <audio id="clip1">
-  	<source src="..\audios\simonSound1.mp3"></source>
-  </audio>
-  <audio id="clip2">
-  	<source src="..\audios\simonSound2.mp3"></source>
-  </audio>
-  <audio id="clip3">
-  	<source src="..\audios\simonSound3.mp3"></source>
-  </audio>
-  <audio id="clip4">
-  	<source src="..\audios\simonSound4.mp3"></source>
-  </audio>
-
   <title>Jogo da Cobrinha</title>
-  <marquee behavior="scroll" direction="right"  class="iconehead">
-      <button class="joguinhosDaAna" href="menu.html">Joguinhos da Ana</button>
-    </marquee>
+
+  <marquee behavior="scroll" direction="right" scrolldelay="200"  class="iconehead">
+    <a class="joguinhosDaAna" href="../menu.html"> Joguinhos da Ana </a>
+</marquee>
 </head>
+<audio id="clip1">
+  <source src="..\audios\simonSound1.mp3"></source>
+</audio>
+<audio id="clip2">
+  <source src="..\audios\simonSound2.mp3"></source>
+</audio>
+<audio id="clip3">
+  <source src="..\audios\simonSound3.mp3"></source>
+</audio>
+<audio id="clip4">
+  <source src="..\audios\simonSound4.mp3"></source>
+</audio>
 
 <body>
 
