--- a/menu.html
+++ b/menu.html
@@ -8,54 +8,29 @@
     <script src="https://unpkg.com/@phosphor-icons/web"></script> 
     <title>Tela Inicial</title>
      <marquee behavior="scroll" direction="right" scrolldelay="200"  class="iconehead">
-         <a class="joguinhosDaAna" href="menu.html">Joguinhos da Ana</a
+         <a class="joguinhosDaAna" href="./menu.html">Joguinhos da Ana</a
     ></marquee>
 </head>
 <body>
-<<<<<<< Updated upstream
     <div class="items-menu">
         <div class="position" >
             <a href="telas\JogoDaCobrinha.html"> <img class="img" src="images/Cobrinha.png" href="..\telas\JogoDaCobrinha.html"> </a>
             <a href="telas\JogoDaCobrinha.html" class="text-color">Joguinho da Cobrinha</a>
-            <div class="stars">
-                <i class="ph-fill ph-star"></i>
-                <!-- <i class="ph ph-star"></i> -->
-                <!-- <i class="ph ph-star"></i>
-                <i class="ph ph-star"></i>
-                <i class="ph ph-star"></i> -->
-            </div>
+        
         </div>
         <div class="position" >
             <a href="telas\JogoDaMemoria.html"> <img src="images/blank.png" href="..\telas\JogoDaMemoria.html"> </a>
             <a href="telas\JogoDaMemoria.html" class="text-color">Joguinho da Memória</a>
         </div>
         <div class="position" >
-            <a href="telas\JogoDoSimon.html"> <img src="images/blank.png" href="..\telas\JogoDoSimon.html"> </a>
+            <a href="telas\JogoDoSimon.html"> <img src="images/simon.jpg" href="..\telas\JogoDoSimon.html"> </a>
             <a href="telas\JogoDoSimon.html" class="text-color">Joguinho do Simon</a>
         </div>
+        <div class="position" >
+            <a href="telas\JogoDePinball.html"> <img class="img" src="images/pinball.png" href="..\telas\JogoDePinball.html"> </a>
+            <a href="telas\JogoDePinball.html" class="text-color">Joguinho de Pinball</a>
+        </div>
 
-        <script>
-            const estrelinhaaa = document.getElementsByClassName("stars")
-            const estrela = document.createElement("i")
-            const estrelas = [document.createElement("i"), document.createElement("i"), document.createElement("i"), document.createElement("i"), document.createElement("i")];
-            console.log(estrelinhaaa)
-
-            estrela.className = "ph ph-star"
-            estrelinhaaa[0].appendChild(estrela)
-        </script>
-=======
-    <div class="position" >
-        <a href="telas\JogoDaMemoria.html"> <img src="images/blank.png" href="telas\JogoDaMemoria.html"> </a>
-        <a href="telas\JogoDaMemoria.html">Joguinho da Memória</a>
-    </div>
-    <div class="position" >
-        <a href="telas\JogoDaCobrinha.html"> <img src="images/Cobrinha.png" href="telas\JogoDaCobrinha.html"> </a>
-        <button href="telas\JogoDaCobrinha.html">Joguinho da Cobrinha</button>
-    </div>
-    <div class="position" >
-        <a href="telas\JogoDePinball.html"> <img src="images/pinball0.jpg" href="telas\JogoDePinball.html"> </a>
-        <button href="telas\JogoDePinball.html">Joguinho de Pinball</button>
->>>>>>> Stashed changes
     </div>
     <div></div>
 </body>
