--- a/telas/JogoDePinball.html
+++ b/telas/JogoDePinball.html
@@ -1,17 +1,34 @@
-<link rel="stylesheet" href="..\style\pinball.css"></link>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="..\style\pinball.css"></link>
+  <script src="..\scripts\matter.min.js" type="text/javascript"></script>
+  <script src="..\scripts\matter-attractors.min.js" type="text/javascript"></script>
+  <script src="..\scripts\decomp.min.js" type="text/javascript"></script>
+  <script src="..\scripts\jquery.js" type="text/javascript"></script>
   <script src="..\scripts\pinball.js" charset="utf-8"></script>
 
-  <marquee behavior="scroll" direction="right"  class="iconehead">
-    <a class="joguinhosDaAna" href="menu.html">Joguinhos da Ana</a
+  <marquee behavior="scroll" direction="right" scrolldelay="200"  class="iconehead">
+    <a class="joguinhosDaAna" href="../menu.html">Joguinhos da Ana</a
 ></marquee>
 
-<div class="container">
+  <title>Pinball</title>
+</head>
+<body>
+ 
+  <div class="container">
   <div class="score current-score">
     score<br><span></span>
   </div>
   <div class="score high-score">
     Score<br><span></span>
   </div>
-  <button class="trigger left-trigger">Aperte!</button>
-  <button class="trigger right-trigger">Aperte!</button>
+  <button class="trigger left-trigger">→</button>
+  <button class="trigger right-trigger">←</button>
 </div>
+
+</body>
+</html>
